Lots of Restructuring The columns now have proper widths and income is stacked on top of categories as intended. Still need to work out some spacing issues.

--- a/styles.css
+++ b/styles.css
@@ -49,20 +49,27 @@ main {
 }
 
 .column {
-	border: 1px solid black;
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 #income {
-	height: 100%;
-	width: 20%;
+	height: 1/3;
+	width: 80%;
 }
 
 #categories {
 	height: 100%;
-	width: 40%;
+	width: 100%;
 }
 
 #expense {
 	height: 100%;
-	width: 40%;
+	width: 50%;
+}
+
+#result {
+	pointer-events: none;
 }
